--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-elastic-carousel": "^0.11.5",
+    "react-icons": "^5.0.1",
+    "react-photo-album": "^2.3.1",
+    "styled-components": "^6.1.8",
+    "yet-another-react-lightbox": "^3.17.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
